# 3DGames

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  jo  main  notas.txt  tareas.txt  visualstudio.iobj  visualstudio.ipdb
data/: level.txt  level1.txt  level_debug.txt  level_tutorial.txt
data/meshes/: RESUME.docx  grid.tga  grid_antigua.tga  p38.ASE  sphere.ASE
data/meshes/asteroides/: asteroide.tga  asteroide1.ASE  asteroide2.ASE  asteroide3.ASE  asteroides.ASE
data/meshes/bomber/: bomber.ASE
data/meshes/cielo/: cielo.ASE
data/meshes/cubemaps/cubemap/: cubemap.ASE
data/meshes/cubemaps/cubemap_space/: space_cubemap.ASE
data/meshes/cubemaps/polar_map/: homewrld_background.tga
data/meshes/fighter/: x3_fighter.ASE
data/meshes/hunter/: hunter.ASE
data/meshes/interceptor/: x3_interceptor.ASE
data/meshes/misil/: misil.ASE
data/meshes/planet/: city_lights.tga  craters.tga  planet_color.tga  planet_crust.tga  planet_surface.tga  purple_planet.tga  sphere.ASE
data/meshes/space_train/: space_train.ASE
data/shaders/: color.fs  polar_background.fs  simple.fs  texture.fs  texture.vs
src/: BulletManager.cpp  BulletManager.h  GUI.cpp  GUI.h  MusicManager.cpp  MusicManager.h  camera.cpp  camera.h  constants.h  controller.cpp  controller.h  entity.cpp  entity.h  explosion.cpp  explosion.h  framework.cpp  framework.h  game.cpp  game.h  game_entities.h  includes.h  level.cpp  level.h  main.cpp  mesh.cpp  mesh.h  player.cpp  player.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h
src/extra/: textparser.cpp
src/extra/coldet/src/: sweep_prune.h  sysdep.h
visualstudio15/: visualstudio2015.VC.VC.opendb
visualstudio15/VS2015/: visualstudio.vcxproj
